# fastzip

./: .vars.ini  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  zip-the-good-parts.md
.github/workflows/: build.yml
doc/: ditto_bug.md
fastzip/: __main__.py  _crc32_combine.py  chooser.py  compressor.py  input.py  output.py  read.py  types.py  util.py  write.py
fastzip/algo/: __init__.py  _base.py  _freelist.py  _queue.py  _wrapfile.py  deflate.py  store.py  zstd.py
fastzip/tests/: __init__.py  __main__.py  algo.py  chooser.py  compressor.py  crc32.py  read.py  types.py  util.py  write.py
