[metadata]
name = fastzip
description = Simple, quick zip file creation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/fastzip/fastzip/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = fastzip,fastzip.algo
setup_requires =
    setuptools_scm
    setuptools >= 38.3.0
python_requires = >=3.8
install_requires =
    click >= 7.0
    keke >= 0.1.1,<0.3.0

[options.extras_require]
all =
    zstandard >= 0.10.0
    pywildcard >= 1.0.10
dev =
    black==22.6.0
    checkdeps==0.0.2
    flake8==5.0.4
    mypy==0.971
    tox==3.25.1
    twine==4.0.1
    ufmt==2.0.0
    usort==1.0.4
    wheel==0.37.1
test =
    coverage==6.4.3
    volatile==2.1.0

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = fastzip/*
omit = fastzip/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py37, py38, py313

[testenv]
deps = .[dev,test]
whitelist_externals = make
commands =
    make test
setenv =
    py{37,38,313}: COVERAGE_FILE={envdir}/.coverage

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
